feat: 메인화면 탭레이아웃, 뷰페이저간 스와이프 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Godaehada</string>
+
+    <!-- activity_main -->
+    <strinsg name="main_tab_home">홈</strinsg>
+    <string name="main_tab_design">디자인</string>
+    <string name="main_tab_it">IT</string>
+    <string name="main_tab_contents">콘텐츠 제작</string>
+    <string name="main_tab_document">문서</string>
 </resources>
