feat: 채팅화면 틀 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Godaehada</string>
+
+    <!-- activity_chat -->
+    <string name="chat_name">김라희</string>
+    <string name="chat_ed_message">메시지를 입력하세요</string>
 </resources>
